syntax = "proto3";

package config.v1;

import "google/protobuf/struct.proto";

import "google/protobuf/field_mask.proto";

message ConfigUpdateResponse {
  bool success = 1;

  optional google.protobuf.Struct updated = 2;
}

message FlexibleDataRequest {
  optional google.protobuf.Value single_value = 1;

  optional google.protobuf.ListValue mixed_list = 2;

  map<string, google.protobuf.Value> properties = 3;
}

message ConfigUpdateRequest {
  optional google.protobuf.Struct config = 1;

  optional google.protobuf.FieldMask update_mask = 2;
}

message FlexibleDataResponse {
  bool processed = 1;

  string summary = 2;
}

service ConfigService {
  rpc UpdateConfig ( ConfigUpdateRequest ) returns ( ConfigUpdateResponse );

  rpc ProcessFlexibleData ( FlexibleDataRequest ) returns ( FlexibleDataResponse );
}
